# Verifymate

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: security-review-workflow.md
examples/: strong-agent-rce.md  weak-agent-rce.md
examples/sample-agent-repo/server/: routes.py  tools.py
src/finding_vetter/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py  test_madbugs_style.py
