[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finding-vetter"
version = "0.1.0"
description = "Checklist-driven security finding reviewer for AI-generated vulnerability reports."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "finding-vetter contributors"}]
keywords = ["security", "vulnerability", "triage", "agent", "ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
finding-vetter = "finding_vetter.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
